[gd_scene load_steps=10 format=3 uid="uid://d4dsmmfjtrces"]

[ext_resource type="Script" path="res://objects/world/zone.gd" id="1_wtqg8"]
[ext_resource type="PackedScene" uid="uid://dx6yf3f0ghhw8" path="res://objects/player/energy_supplier.tscn" id="2_4j255"]
[ext_resource type="ParameterAsset" uid="uid://7vo5twaru018" path="res://addons/FMOD/editor/resources/parameters/{01f40d11-8630-4966-92fe-eb44b9b83cfe}.tres" id="3_obbw5"]
[ext_resource type="Texture2D" uid="uid://3ghmm7c5yahr" path="res://icon.svg" id="3_tjnon"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_i2paf"]
radius = 20.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5x2hd"]
albedo_color = Color(0.026012, 0.0690966, 0.156857, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_70wcg"]
material = SubResource("StandardMaterial3D_5x2hd")
top_radius = 0.4
bottom_radius = 0.4
height = 9.9

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_baqlw"]
albedo_color = Color(0.258824, 0.976471, 1, 1)

[sub_resource type="CylinderMesh" id="CylinderMesh_mjp8u"]
material = SubResource("StandardMaterial3D_baqlw")
height = 0.001

[node name="Zone" type="Node3D"]
script = ExtResource("1_wtqg8")

[node name="EnergySupplier" parent="." instance=ExtResource("2_4j255")]

[node name="ZoneChildren" type="Node3D" parent="."]

[node name="ZoneBonus" type="Node3D" parent="."]

[node name="ZoneDetector" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="ZoneDetectorShape" type="CollisionShape3D" parent="ZoneDetector"]
shape = SubResource("CylinderShape3D_i2paf")

[node name="TotemBase" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_70wcg")

[node name="TotemPercentage" type="MeshInstance3D" parent="."]
mesh = SubResource("CylinderMesh_mjp8u")

[node name="CorruptionTimer" type="Timer" parent="."]
one_shot = true

[node name="SubwaveTimer" type="Timer" parent="."]
wait_time = 60.0
one_shot = true

[node name="IntensityController" type="StudioGlobalParameterTrigger" parent="."]
parameter = ExtResource("3_obbw5")
value = 1.0

[node name="MinimapIcon" type="Sprite3D" parent="."]
transform = Transform3D(-10, -1.50996e-06, 6.60024e-15, 0, -4.37114e-07, -1, 1.50996e-06, -10, 4.37114e-08, 0, 21, 0)
texture = ExtResource("3_tjnon")
